[tool.poetry]
name = "mdd"
version = "0.1.0"
description = ""
authors = ["beginnerSC <25188222+beginnerSC@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.14.1"
plotly = "^5.17.0"
dash-bootstrap-components = "^1.4.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
